slight changes and new README

--- a/GDgame.html
+++ b/GDgame.html
@@ -6,7 +6,7 @@
 
     <title>GIGIDASH-game</title>
     <link rel="stylesheet" href="gameStyle.css">
-    <link rel="icon" type="image/png" href="GGD-pfp.png">
+    <link rel="icon" type="image/png" href="Media/GGD-pfp.png">
 </head>
 <body>
 
