--- a/GDmenu.html
+++ b/GDmenu.html
@@ -6,7 +6,7 @@
 
     <title>GIGIDASH-menu</title>
     <link rel="stylesheet" href="menuStyle.css">
-    <link rel="icon" type="image/png" href="GGD-pfp.png">
+    <link rel="icon" type="image/png" href="Media/GGD-pfp.png">
 </head>
 <body>
 
